<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/star_info_bg"
        android:paddingTop="12dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="22dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/iv_mood"
            app:layout_constraintBottom_toBottomOf="@id/iv_mood"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="16sp"
            android:textColor="@color/star_info_date"
            tools:text="2018.11.16"/>

    <ImageView
            android:id="@+id/iv_mood"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/ic_mood_happy"
            tools:ignore="ContentDescription"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toTopOf="@id/tv_skip"
            app:layout_constraintTop_toBottomOf="@id/iv_mood"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:background="@null"
                android:inputType="textMultiLine"
                android:maxLines="4"
                android:textSize="30sp"
                android:textColor="@color/star_info_input"
                android:textColorHint="@color/star_info_hint"
                android:hint="@string/hint_star"
                tools:ignore="Autofill,LabelFor"
                tools:text="写点什么呢，说起来这里要不要原型上的小笔呢？这是今日份的开心，写点什么吧写点什么呢，起来这里要不要原型上的小笔呢？这是今日份的开心，写点什么吧写点什么呢，说起来这里要不要原型上的小笔呢？这是今日份的开心，写点什么吧写点什么呢，说起来这里要不要原型上的小笔呢？这是今日份的开心，写点什么吧写点什么呢，说起来这里要不要原型上的小笔呢？这是今日份的开心，写点什么吧。所以这么多应该够了吧"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/accomplish"
            android:textColor="@color/star_info_btn"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_cancel"/>

    <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/cancel"
            android:textColor="@color/star_info_btn"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_skip"/>

    <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="@color/star_info_btn"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>