<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="10dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_name_dialog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@id/tv_skip"
            app:layout_constraintTop_toBottomOf="@id/iv_mood"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp">

        <EditText
                android:id="@+id/ev_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:gravity="start"
                android:background="@null"
                android:maxLines="1"
                android:textSize="20sp"
                android:textColor="@color/star_info_input"
                android:textColorHint="@color/star_info_hint"
                android:hint="@string/change_hint"
                tools:ignore="Autofill,LabelFor"
                android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
            android:id="@+id/tv_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/accomplish"
            android:textColor="@color/star_info_btn"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_cancel_change"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_name_dialog"
            app:layout_constraintVertical_bias="0.49"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>

    <TextView
            android:id="@+id/tv_cancel_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/cancel"
            android:textColor="@color/star_info_btn"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/input_name_dialog"
            app:layout_constraintVertical_bias="0.01"/>

</android.support.constraint.ConstraintLayout>